  - fix interpretation of $smarty->security in {html_image} (messju)
  - add caching of requested paths to _assemble_plugin_filepath() (messju)
  - fix handling of comments inside {php}- and {literal}-blocks (messju)
  - fix bug handling triple-quotes in config-files (BRDude, messju)
  - change default of request_use_auto_globals to true - $_SERVER is
    now preferred over $HTTP_SERVER_VARS (messju)
  - re-add support for $SCRIPT_NAME (messju)
  - reactivate $smarty->default_modifiers (messju)
  - add cookie persistance to debug console (Monte)
  - allow single-digit days and months without smarty_make_timestamp()
    in html_select_date (messju)
  - fix headers sent erroneously with cache_modified_check and fetch()
    (wphilips, messju)
  - fix config_file path bug (Marc Cabadas, Monte)
  - fix 'is even by' and 'is odd by' logic (Monte)
  - add day_empty, month_empty, year_empty and all_empty attributes to
    html_select_date (messju)
  - add table of explanation for {if} qualifiers in docs (boots)
  - fix bug when comparing array-keys to "selected" in html_options
    and html_checkboxes (messju)
  - add better checks for correctly nested tags when compiling (messju)
  - remove {$SCRIPT_NAME}. use {$smarty.server.SCRIPT_NAME} instead (messju)
  - remove $global_assign. assign global variables explicitly instead (messju)
  - fix example for count_characters in docs (boots)
  - add section new basic syntax section "Escaping Smarty Parsing" in docs (boots)
  - fix error handler call in config_load (boots)
  - remove warning in debug_print_var on php-resources (messju)
  - move function.assign.php to compiler.assign.php (messju)
  - add property $tpl_error_reporting (messju)
  - remove property $undefined. "null" is used literally instead (messju)

Version 2.6.0 (Nov 19, 2003)
----------------------------

  - move Smarty::quote_replace() to Smarty_Compiler::_quote_replace() (messju)
  - remove import of of attributes of {include_php} to php's namespace.